Adding in some code for the wp-config and removing unnecessary style.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*   
-Theme Name: MO Press Services Theme
+Theme Name: ______ Theme
 Theme URI: http://thematictheme.com/
 Description: Use this theme to start your Thematic Child Theme development.
 Author: Patrick Sasser
@@ -215,25 +215,4 @@ a img.aligncenter {
 {
 	padding: 0;
 }
-
-@media (min-width: 768px) {
-	.row-height
-	{
-		display: table;
-		table-layout: fixed;
-		height: 100%;
-		width: 100%;
-	}
-	.col-height
-	{
-		display: table-cell;
-		float: none;
-		height: 100%;
-	}
-	.col-middle
-	{
-		vertical-align: middle;
-	}
-}
-
 /*End maintenance styling */
